gcc/testsuite/gdc.test/runnable/test21.d
// EXTRA_SOURCES: imports/test21a.d

import imports.test21a;

int main()
{
    TA!(int) variable;
    return 0;
}

