gcc/testsuite/gdc.test/fail_compilation/bug5.d
// REQUIRED_ARGS:

int test1()
{
    if (false)
        return 0;
}

